syntax = "proto3";

message Integers {
    int32 int32 = 2;
    int64 int64 = 3;
    sint32 sint32 = 4;
    sint64 sint64 = 5;
    sfixed32 sfixed32 = 6;
    sfixed64 sfixed64 = 7;
    fixed32 fixed32 = 8;
    fixed64 fixed64 = 9;
}
